# excelsior

./: .drawio  19008主要文档间关联关系.drawio  19008项目监控实践结构分析图.drawio  AI自动安装依赖流程.drawio  ASH脚本-RPA-Linux架构图.drawio  ASH脚本-打包流程说明.drawio  Android启动流程.drawio  CMMI、脑图.drawio  CMMI活动与国军标5000A专用、共用实践对比表.drawio  Chatbot 开放消息推送服务接口.drawio  Cloud目标计划图.drawio  README.md  RPA用户配置Chatbot组件.drawio  Untitled Diagram.drawio  WPS_SDK.drawio  XN277头盔端架构说明.drawio  XN277模块划分.drawio  XRefresh类图.drawio  XTabBottom类图.drawio  action逻辑.drawio  ash.drawio  ash脚本架构图.drawio  factory执行逻辑.drawio  java 设计模式  linux_driver.drawio  mbluetooth框架设计类图.drawio  mbluetooth框架设计类图0.drawio  mbluetooth框架设计类图1.drawio  mbluetooth框架设计类图2.drawio  mbluetooth框架设计类图3.drawio  oem脚本专利发明方案图1.drawio  rpa-chrome.drawio  rpa引擎action逻辑.drawio  win版循环获取相似元素相关逻辑图.drawio  【专利图】信创文件管理.drawio  人脸识别组件类图0.drawio  人脸识别组件类图1.drawio  人脸识别组件类图2.drawio  人脸识别组件类图3.drawio  信创IPA C4架构图1.0.drawio  (+49 more)
rtmp/: Untitled Diagram.drawio
rtmp/rtmp_ffmpeg/: settings.gradle
rtmp/rtmp_ffmpeg/app/: build.gradle
rtmp/rtmp_ffmpeg/app/src/androidTest/java/com/itexcelsior/as/x/rtmp/ffmpeg/: ExampleInstrumentedTest.java
rtmp/rtmp_ffmpeg/app/src/main/: AndroidManifest.xml
rtmp/rtmp_ffmpeg/app/src/main/cpp/: CMakeLists.txt  ffmpeg_common.cpp  ffmpeg_common.h  ffmpeg_rtmp.cpp  ffmpeg_test.cpp  native-lib.cpp
rtmp/rtmp_ffmpeg/app/src/main/java/com/itexcelsior/as/x/rtmp/camera/: CameraActivity.java  CameraHandler.java  FFmpegRtmpCameraNative.java  MySurfaceview.java  RtmpPreviewCallback.java
rtmp/rtmp_ffmpeg/app/src/main/java/com/itexcelsior/as/x/rtmp/ffmpeg/: MainActivity.java
rtmp/rtmp_ffmpeg/app/src/main/java/com/itexcelsior/as/x/rtmp/file/: FFmpegRtmpFileNative.java
rtmp/rtmp_ffmpeg/app/src/main/java/com/itexcelsior/as/x/rtmp/util/: ConstantUtils.java
rtmp/rtmp_ffmpeg/app/src/main/res/layout/: activity_camera.xml  activity_main.xml
rtmp/rtmp_ffmpeg/app/src/main/res/values/: strings.xml
rtmp/rtmp_ffmpeg/app/src/test/java/com/itexcelsior/as/x/rtmp/ffmpeg/: ExampleUnitTest.java
rtmp/rtmp_ffmpeg/gradle/wrapper/: gradle-wrapper.properties
